--- a/.gitignore
+++ b/.gitignore
@@ -216,13 +216,13 @@ cython_debug/
 *.csv
 
 # 忽略doc/docx文件
-*.doc
-*.docx
+#*.doc
+#*.docx
 
 # 其他
 data/**
 data/in
 data/out
-#template/out
+template/out
 config.yaml
 *.whl
